test/zinc_source/compile_errors/callables/02_callable_dict_key.zn
// expected-error: dict key cannot be a callable in v1
fn inc(x) {
    return x + 1
}

fn main() {
    values = {
        inc: 1
    }
    print(values["nope"])
}
